# gadget-hub

./: .gitignore  GUIA-APIs-E-PAGAMENTOS.md  GUIA-CJ-DROPSHIPPING-SHOPIFY.md  GUIA-DOMINIO-GODADDY-SHOPIFY.md  GUIA-GADGET-HUB-COMPLETO.md  GUIA-SHOPIFY-CONFIGURACAO.docx  PLANO-MELHORIAS-BLENDER.docx  PLANO-MODULAR-V3.md  PLANO-REESTRUTURACAO-V2.md  PLANO-REESTRUTURACAO.md  README.md  checkout.html  index.html  main.js  package-lock.json  package.json  produto.html  project-memory-updated.md
DPLL/: 01_APIs_Necessarias_Completo.md  02_Atualizacoes_Workflow_n8n.md  DATA_CORE_BLINDAGEM_ERROS.md  DATA_CORE_PLANO_TECNICO.md
agentes/: .env.example  .gitignore  DEPLOY.md  FIX-SHOPIFY-CONFIG.js  MANUAL-OPERACAO.md  README-FINAL.md  README.md  main.js  package-lock.json  package.json  setup-env.js  test-cj-api.js  test-database.js  test-pipeline.js  test-shopify.js  update-env-shopify.js
aruivo pro X01/: BLUEPRINT.md  CLOUD_ARCHITECTURE.md  FASE2.md  PROMPT_VIDEO_DESERT.md  PROMPT_VIDEO_TECLADO_GAMER.md  README.md  SKILL.md  analyzer.py  claude_client.py  config.py  dna_evolver.py  dna_extractor.py  higgsfield.py  ideator.py  main.py  manager.py  orchestrator.py  refiner.py  (+14 more)
cerebro-centram/: .env.example  .gitignore  pyproject.toml
cerebro-centram/api/routers/: skills.py
cerebro-centram/config/: settings.py
cerebro-centram/core/: bridge.py  llm.py  models.py  orchestrator.py  registry.py
cerebro-centram/skills/data_core/: agent.py
cerebro-centram/skills/imagens/: __init__.py
cerebro-centram/workflows/: n8n_dashboard_media.json  n8n_dashboard_produtos.json
(+185 files in other folders)
